--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,8 @@
 
 <section class="hero">
     <div class="container hero__container">
-        <div class="hero__ice-cream">
+        <div class="elipse"></div>
+        <div class="wrapper">
             <picture>
                 <source srcset="./images/png/hero/descktop/icecream.png 1x, ./images/png/hero/descktop/icecream@2x.png 2x"
                     media="(min-width:1200px)">
@@ -12,7 +13,7 @@
                 <source srcset="./images/png/hero/mobile/icecream.png 1x, ./images/png/hero/mobile/icecream@2x.png 2x"
                     media="(max-width: 767px)">
             
-                <img src="./images/png/hero/mobile/icecream.png" alt="">
+                <img class="hero__ice-cream" src="./images/png/hero/mobile/icecream.png" alt="">
             </picture>
         </div>
 
