--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,27 +1,48 @@
+.hero__container{
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+}
+
+
+  .elipse {
+    position: absolute;
+    display: inline-block;
+    width: 346px;
+    height: 344px;
+    border-radius: 50%;
+    background-color: #FFA5BA;
+
+    @media screen and (max-width:767px){
+      top: 83px;
+      right: -62px;
+    }
+
+    @media screen and (min-width:$tablet){
+      width: 324px;
+      height: 322px;
+      top: 31px;
+      left: 307px;
+    }
+}
+
 .hero {
+  
   width: 100%;
   height: 502px;
   background-color: $accent-rose-color;
 
-   background-image:
-  url('/../src/images/Ellipse\ 3.png');
-  background-repeat: no-repeat;
-  background-position:right;
-  @media screen and(min-width:$tablet) {
-    width: 100%;
-    max-width: 1199px;
-    height: 399px;
-     background-image: 
-     url('/../src/images/Ellipse.t.png');
-  background-repeat: no-repeat;
-  background-position:top 31px right 137px;
+  @media screen and (min-widtn:$tablet){
+      height: 399px;
+    }
+
+  @media screen and (min-widtn:$desktop){
+    height: 665px;
   }
   
-  &__container {
-    padding: 0;
-  }
   &__ice-cream {
-    position: fixed;
+   
+   position: absolute;
     top: 92px;
     right: 32px;
     @media screen and(min-width:$tablet){
@@ -38,13 +59,13 @@
     display: none;
     @media screen and(min-width:$tablet){
     display: block;
-    position: fixed;
+    position: absolute;
     right: 34px;
-    bottom: 8px;
+    top: 266px;
   }
     @media screen and(min-width:$desktop){
     display: block;
-    position: fixed;
+    // position: fixed;
     right: 110px;
     top: 433px;
   }
@@ -54,22 +75,24 @@
     display: none;
      @media screen and(min-width:$tablet){
     display: block;
-    position: fixed;
+    position: absolute;
     left: 34px;
-    bottom: 36px;
+    top: 245px;
   }
     @media screen and(min-width:$desktop){
     display: block;
-    position: fixed;
+    // position: fixed;
     left: 76px;
     bottom: 46px;
   }
   }
 
   &__title {
-    position: fixed;
+    position: absolute;
     top: 193px;
-    left: 20px;
+   
+    
+    
     
     font-family: Titan One;
     font-weight: 400;
@@ -78,9 +101,10 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $white-color;
+   
 
     @media screen and(min-width:$tablet){
-      position: fixed;
+      // position: fixed;
     top: 102px;
     left: 34px;
     font-family: Titan One;
@@ -107,9 +131,10 @@
     }
   }
   &__products-btn {
-    position: fixed;
+   position: absolute;
     top: 318px;
-    left: 20px;
+ 
+    margin-right: 8px;
     font-weight: 400;
     font-size: 8px;
     line-height: 10px;
@@ -127,7 +152,7 @@
     }
   }
   &__made-btn {
-    position: fixed;
+    position: absolute;
     top: 318px;
     left: 90px;
     font-weight: 400;
@@ -140,6 +165,11 @@
     width: 83px;
     height: 24px;
     border-radius: 22px;
+    @media screen and(min-width:480px){
+      
+      left: 110px;
+      }
+
     @media screen and(min-width:$tablet){
     top: 202px;
     left: 104px;
