--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -40,6 +40,7 @@
 
   @media screen and (min-width: $tablet) {
     max-width: 168px;
+    margin-top: 0px;
   }
 
   @media screen and (min-width: $desktop) {
