переробив хедер, відмовився від абсолютів

--- a/src/sass/layout/_hero_header.scss
+++ b/src/sass/layout/_hero_header.scss
@@ -15,38 +15,47 @@
     padding: 6px 20px;
 
     @media screen and (min-width: 768px) {
-     padding: 34px 52px; 
+     padding: 35px 50px; 
+     padding-bottom: 15px;
+
     }
     @media screen and (min-width: 1280px) {
-      padding: 46px 50px; 
+      padding: 45px 50px; 
     }
   }
 
   .hero-center{
-    position: relative;
-    overflow: hidden;
-    height: 446px;
+    // position: relative;
+    // overflow: hidden;
+    // height: 445px;
 
      @media screen and (min-width: 768px) {
        position:static;
+      //  height: 355px; //покищо повисить тут/////////////////////
     }
     @media screen and (min-width: 1280px) {
     }
 
   }
+  .hero-block{
+    position: relative;
+    // overflow: hidden
+  }
+
+
 
   .hero-case{
-    // padding-left: 142px;
-
-    position: absolute;
-    top: 37px;
-    left: 130px;
-    min-width: 320px;
+    position: relative;
+    z-index: 1;
+    margin-top: -356px;
+    margin-left: 120px;
 
     @media screen and (min-width: 768px) {
       // padding-left: 378px;
-      top: 63px;
-      left: 307px;
+      // top: 63px;
+      // left: 307px;
+      margin-top: -380px;
+      padding-bottom: 30px;
     }
     @media screen and (min-width: 1280px) {
       // padding-left: 594px;
@@ -67,6 +76,44 @@
     
   }
 
+ 
+
+   .notitia-block{
+   
+    // position: absolute;
+    // z-index: 3;
+    // left: 20px;
+    // top: 345px;
+    margin-top: 160px;
+    padding-left: 50px;
+
+     @media screen and (min-width: 768px) {
+      display: flex;
+      align-items: center; 
+      padding-bottom: 25px;
+      margin-top: 20px;
+    }
+    @media screen and (min-width: 1280px) {
+    }
+ }
+
+ .title-notitia{
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 8px;
+  line-height: 150%;
+  /* or 12px */
+
+
+  color: #FFFFFF;
+ }
+
+ .title-case{
+  width: 115px;
+  height: 50px;
+ }
+
   .btn-case{
     display: flex;
     align-items: center;    
@@ -74,7 +121,7 @@
   }
 
   .Buy-now-button{
-
+    z-index: 2;
     font-family: DM Sans;
     font-style: normal;
     font-weight: bold;
@@ -113,10 +160,19 @@
   }
 
   .slogan-title{
-  position: absolute;
-  z-index: 3;
-  left: 20px;
-  top: 193px;   
+
+    position: relative;
+    z-index: 7;
+    padding-left: 20px;
+    margin-top: 135px;
+    
+  
+   @media screen and (min-width: 768px) {
+    padding-left: 50px;
+    padding-top: 0;
+  }
+  @media screen and (min-width: 1280px) {
+  }
   }
 
   .hero-title{
@@ -147,7 +203,14 @@
   .header-but-list{
     padding-top: 19px;
     display: flex;
-  }
+    padding-bottom: 160px;
+
+     @media screen and (min-width: 768px) {
+      padding-bottom: 20px;
+    }
+    @media screen and (min-width: 1280px) {
+    }
+    }
 
 
 
@@ -250,6 +313,7 @@
   }
 
   .burger-btn {
+    z-index: 2;
     transition: var(--transition-duration) var(--timing-function);
     padding: 0;
     display: flex;
@@ -264,22 +328,33 @@
       }
   }
 
-  .hero-boarder {
-    position: absolute;
+  .title-button-icon{
 
-    margin-left: 50px;
+    margin-top: 10px;
+    padding: 5px;
+
+    
+
+    background: #FFFFFF;
+    border-radius: 20px;
+    fill: #D41443;
+  }
+
+  .hero-boarder {
+    z-index: 1;
+    position: relative;
+    margin-left: 36px;
     width: 346px;
     height: 346px;
-    border-radius: 50%;  
-    background:var(--label-color);
-    margin-top: 27px;
+    border-radius: 50%;
+    background: var(--label-color);
+    margin-top: -430px;
 
     @media screen and (min-width: 768px) {
-    margin-left: 277px;
-    margin-top: -80px;
+    margin-left: 250px;
+    margin-top: -400px;
     }
     @media screen and (min-width: 1280px) {
-    margin-left: 495px;
     }
   }
 
@@ -293,15 +368,7 @@
   }
 }
 
-.header {
-  min-width: 230px;
-  @media screen and (min-width: 768px) {
-    min-width: 180px;
-  }
-  @media screen and (min-width: 1280px) {
-    min-width: 330px;
-  }
-}
+
 
 
 
@@ -466,3 +533,7 @@
    .accent{
     color: #D41443;
   }
+
+
+
+  
