--- a/src/partials/hero_header.html
+++ b/src/partials/hero_header.html
@@ -86,7 +86,15 @@
 
                     </picture>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+                    <div class="title-case">
+
+                        <p class="title-notitia">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+                        
+                        <svg class="title-button-icon" width="18" height="18">
+                            <use href="./images/sprite.svg#right"></use>
+                        </svg>
+
+                    </div>
 
 
                 </div>
@@ -208,4 +216,5 @@
 
 
 </section>
+
 
