финальная стилизация модалок

--- a/src/partials/modal1.html
+++ b/src/partials/modal1.html
@@ -10,7 +10,7 @@
                     <label class="form-label" for="name">The product's name 
                     </label>
                     <div class="info-input">
-                        <input type="text" name="name" id="name" required>
+                        <input class="modal-input" type="text" name="name" id="name" required>
                         <svg class="modal-icon">
                             <use href="./images/icons/symbol-defs-sprite.svg#icon-person-black"></use>
                         </svg>
@@ -19,7 +19,7 @@
                 <div>
                     <label class="form-label" for="tel">Quantity (1 piece)</label>
                     <div class="info-input">
-                        <input type="tel" name="tel" id="tel" required>
+                        <input class="modal-input" type="tel" name="tel" id="tel" required>
                         <svg class="modal-icon">
                         <use href="./images/icons/symbol-defs-sprite.svg#icon-phone-black"></use>
                         </svg>
@@ -28,7 +28,7 @@
                 <div>
                     <label class="form-label" for="mail">E-mail</label>
                     <div class="info-input">
-                        <input type="email" name="mail" id="mail" required>
+                        <input class="modal-input" type="email" name="mail" id="mail" required>
                         <svg class="modal-icon">
                             <use href="./images/icons/symbol-defs-sprite.svg#icon-email-black"></use>
                         </svg>
