--- a/src/partials/modal3.html
+++ b/src/partials/modal3.html
@@ -9,7 +9,7 @@
                     <label class="form-label" for="name">Name 
                     </label>
                     <div class="info-input">
-                        <input type="text" name="name" id="name" required>
+                        <input class="modal-input" type="text" name="name" id="name" required>
                         <svg class="modal-icon">
                             <use href="./images/icons/symbol-defs-sprite.svg#icon-person-black"></use>
                         </svg>
@@ -18,7 +18,7 @@
                 <div>
                     <label class="form-label" for="tel">Phone </label>
                     <div class="info-input">
-                        <input type="tel" name="tel" id="tel" required>
+                        <input class="modal-input" type="tel" name="tel" id="tel" required>
                         <svg class="modal-icon">
                             <use href="./images/icons/symbol-defs-sprite.svg#icon-phone-black"></use>
                         </svg>
@@ -27,7 +27,7 @@
                 <div>
                     <label class="form-label" for="mail">E-mail</label>
                     <div class="info-input">
-                        <input type="email" name="mail" id="mail" required>
+                        <input class="modal-input" type="email" name="mail" id="mail" required>
                         <svg class="modal-icon" >
                             <use href="./images/icons/symbol-defs-sprite.svg#icon-email-black"></use>
                         </svg>
@@ -37,7 +37,7 @@
                     <label for="policy" class="modal-policy-text">
                         <input class="modal-checkbox visually-hidden" type="checkbox" name="policy" id="policy">
                         <span class="modal-agreement">
-                            I agree to the terms of use <a class="terms" href="#">Terms and
+                            I agree to the terms of use <a class="terms link" href="#">Terms and
                                 Conditions</a></span>
                     </label>
                 </div>
