--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -5,7 +5,8 @@
   // position: relative;
 }
 .contacts-container {
-  min-width: 320px;
+  // min-width: 320px;
+  // Можно вернуть, убрал чтобы ужималось при <320-768 как в футере 
   margin: 0 auto;
   position: relative;
   bottom: 84px;
@@ -89,6 +90,7 @@
   justify-content: center;
   align-items: center;
   border: transparent;
+  cursor: pointer;
 }
 .contacts-btn.location {
   margin-bottom: 12px;
@@ -135,11 +137,13 @@
 //   background: #ECEBEB;
 //   color: #D41443;
 // }
-@media screen and (min-width: 480px) {
-  .contacts-container {
-    width: 480px;
-  }
-}
+
+// @media screen and (min-width: 480px) {
+//   .contacts-container {
+//     width: 480px;
+//   }
+// }
+// Можно вернуть, убрал чтобы ужималось по центру при <320-768 как в футере 
 
 @media screen and (min-width: 768px) {
   .contacts-section {
@@ -182,10 +186,10 @@
 
   .contacts-buttons {
     margin-top: 81px;
-    margin-left: auto;
-    margin-right: auto;
+    text-align: center;
     .contacts-btn {
       display: inline-block;
+      
       width: 191px;
       &.location {
         margin-bottom: 0px;
@@ -252,29 +256,3 @@
     }
   }
 }
-// БЄКГРАУНД НА 1280
-
-// .contacts-section {
-//   &::before {
-//     content: '';
-//     left: 50%;
-//     transform: translateX(-50%);
-// // left: -327px;
-//     position: absolute;
-//     display: block;
-//     width: 1920px;
-// height: 382px
-//     background-image: url('../images/');
-//   }
-// }
-
-// @media screen and (min-device-pixel-ratio: 2),
-//   screen and (min-resolution: 192dpi),
-//   screen and (min-resolution: 2dppx) {
-//   .contacts-section {
-//     &::before {
-//       background-size: contain;
-//       background-image: url('../images/');
-//     }
-//   }
-// }
