--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -41,6 +41,11 @@ li {
   font-size: 12px;
   line-height: 2.55;
 
+display: inline;
+  background-repeat: no-repeat;
+	background-size: 100% 1px;
+  background-image: repeating-linear-gradient(to right, $review-gradient,  $review-gradient);
+
 @media screen and(min-width:768px){
   font-size: 14px;
   line-height: 2.16;
@@ -91,7 +96,7 @@ background-repeat: no-repeat;
      width: 32px;
     height: 4px;
      fill: $accent-btn-hover-color;
-     top: 312px;
+     top: 272px;
   
      left: 50%;
      transform: translateX(-50%);}
