--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,6 +1,6 @@
 <!--PRODUCTS-->
 <section class="section-products">
-  <div class="container">
+  <div class="container products-container">
     <p class="subtitle">100% natural</p>
     <h2 class="title">Products</h2>
     <ul class="products-list list">
