js modal buymeny

--- a/src/partials/modal-buy-now.html
+++ b/src/partials/modal-buy-now.html
@@ -1,4 +1,4 @@
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop is-hidden" data-modal menubuy-modal>
   <div class="modal">
     <button class="modal-close-btn" type="button" data-modal-close>
       <svg class="modal-icon">
