gallery is done

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,6 @@
 <section class="gallery">
-  <div class="container">
+  <div class="container gallery-container">
     <h2 class="title visually-hidden">Gallery</h2>
+    </div>
   </div>
 </section>
