готов макет галереи, нужно оптимизировать картинки
 нужно оптимизировать картинки и нарезать для планшетной и мобильной версии

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,1 +1,53 @@
-<section class="galerry"></section>
+<section class="gallery">
+    <div class="header-container">
+        <section class="masonry">
+            <figure class="cell-1">
+                <img src="./images/gallery/1.jpg"
+                    alt="Food picture 1">
+            </figure>
+            <figure class="cell-2">
+                <img src="./images/gallery/2.jpg"
+                    alt="Food picture 1">
+            </figure>
+            <figure class="cell-3">
+                <img src="./images/gallery/3.jpg"
+                    alt="Food picture 1">
+            </figure>
+            <figure class="cell-4">
+                <img src="./images/gallery/4.jpg"
+                    alt="Food picture 1">
+            </figure>
+
+            <figure class="cell-5">
+                <img src="./images/gallery/5.jpg"
+                    alt="Food picture 1">
+            </figure>
+
+            <figure class="cell-6">
+                <img src="./images/gallery/6.jpg"
+                    alt="Food picture 1">
+            </figure>
+
+            <figure class="cell-7">
+                <img src="./images/gallery/7.jpg"
+                    alt="Food picture 1">
+            </figure>
+
+            <figure class="cell-8">
+                <img src="./images/gallery/8.jpg"
+                    alt="Food picture 1">
+            </figure>
+
+            <figure class="cell-9">
+                <img src="./images/gallery/9.jpg"
+                    alt="Food picture 1">
+            </figure>
+
+            <figure class="cell-10">
+                <img src="./images/gallery/10.jpg"
+                    alt="Food picture 1">
+            </figure>
+
+        </section>
+    </div>
+</section>
