Убирает лишний css

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -21,7 +21,6 @@
     @media screen and (min-width: $tablet) {
       display: block;
       max-width: 114px;
-      margin-right: auto;
       margin-left: 120px;
     }
 
@@ -30,7 +29,6 @@
       margin-left: 185px;
     }
   }
-
 
   &__title-thumb {
     margin-top: 110px;
@@ -188,7 +186,6 @@
 .compositions-links {
   display: flex;
   align-items: center;
-  margin-right: auto;
   margin: 0;
   padding: 0;
 
@@ -208,6 +205,10 @@
     &:hover,
     &:focus {
       background-color: var(--accent-hover-color);
+    }
+
+    @media screen and (min-width: $desktop) {
+      min-width: 104px;
     }
   }
 
@@ -289,7 +290,7 @@
   @media screen and (max-width: 767px) {
     position: absolute;
     overflow: hidden;
-    width: 285px;
+    width: 276px;
     height: 418px;
     top: 78px;
     left: 24px;
