Фиксит счётчики на десктопе

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -232,7 +232,12 @@
       right: 0;
       top: 56px;
     }
-  }
+
+    @media screen and (min-width: $desktop) {
+      right: 0;
+      top: 118px;
+    }
+    }
 
   &__number {
       position: relative;
