--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -61,6 +61,10 @@
     background-color: var(--social-link-bg-color);
     border-radius: 50%;
 
+    &:focus {
+        background-color: var(--dark-pink);
+    }
+
     &-icon {
         width: 60%;
         height: 60%;
