--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,21 +8,21 @@
                 <ul class="social-link-list list">
                     <li class="social-link-list-item">
                         <a class="social-link" href="#" target="_blank">
-                            <svg class="social-link-icon git">
+                            <svg class="social-link-icon">
                                 <use href="./images/sprite.svg#icon-github"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-link-list-item">
                         <a class="social-link" href="#" target="_blank">
-                            <svg class="social-link-icon telegram">
+                            <svg class="social-link-icon">
                                 <use href="./images/sprite.svg#icon-telegram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-link-list-item">
                         <a class="social-link" href="#" target="_blank">
-                            <svg class="social-link-icon fb">
+                            <svg class="social-link-icon">
                                 <use href="./images/sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
