--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -15,4 +15,7 @@
   --social-link-bg-color: #FEA5BB;
   --mobile-menu-bg-color: #E17992;
   --mobile-menu-pseudo-color: #E18298;
+  --accent: #ECEBEB;
+  --backgroundPink: #fff5f6;
+  --hero-pink: #FFB8CA;
 }
