--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,5 @@
 <section class="gallery">
-  <div class="container">
+  <div class="gallery-container container">
     <h2 class="title visually-hidden">Gallery</h2>
   </div>
 </section>
