Added all styles for mobile, buttons don`t style

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -40,6 +40,7 @@
                 <p class="location-work-day">Saturday - Sunday</p>
                 <p class="location-work-time">08:00 AM - 16:00 PM</p>
             </li>
+        </ul>
             <address class="location-address">
                 <ul class="location-address-list list">
                     <li class="location-address-item">
@@ -50,7 +51,7 @@
                     </li>
                 </ul>
             </address>
-        </ul>
+
     </li>
     <li class="location-list-item">
         <h3 class="location-list-place cafe">CAFE</h3>
@@ -65,6 +66,7 @@
                 <p class="location-work-day">Saturday - Sunday</p>
                 <p class="location-work-time">08:00 AM - 16:00 PM</p>
             </li>
+        </ul>
             <address class="location-address">
                 <ul class="location-address-list list">
                     <li class="location-address-item">
@@ -75,10 +77,29 @@
                     </li>
                 </ul>
             </address>
-        </ul>
+
     </li>
 </ul>
 
+<ul class="location-button-list list">
+    <li class="location-button-item">
+        <button class="location-button basic-button" type="button"><span>Our Locations</span>
+        
+                <svg class="basic-button-arrow location">
+                    <use href="./images/icon-sprite.svg#icon-arrow"></use>
+                </svg>
+
+        </button>
+    </li>
+    <li class="location-button-item">
+        <button class="location-button basic-button" type="button"><span>Franchise</span>
+                <svg class="basic-button-arrow">
+                    <use href="./images/icon-sprite.svg#icon-arrow"></use>
+                </svg>
+
+        </button>
+    </li>
+</ul>
 
 </div>
 </section>
