--- a/src/sass/layout/_hero_header.scss
+++ b/src/sass/layout/_hero_header.scss
@@ -12,6 +12,7 @@
 
 
   .hero-section {
+    
     padding: 6px 20px;
 
     @media screen and (min-width: 768px) {
@@ -21,6 +22,8 @@
     }
     @media screen and (min-width: 1280px) {
       padding: 45px 50px; 
+      display: flex;
+      align-items: center;
     }
   }
 
@@ -28,6 +31,7 @@
     // position: relative;
     // overflow: hidden;
     // height: 445px;
+
 
      @media screen and (min-width: 768px) {
        position:static;
@@ -39,7 +43,9 @@
   }
   .hero-block{
     position: relative;
-    // overflow: hidden
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
 
@@ -47,16 +53,13 @@
   .hero-case{
     position: relative;
     z-index: 1;
-    margin-top: -356px;
-    margin-left: 120px;
+    margin-top: -214%;
+    margin-left: -115%;
 
     @media screen and (min-width: 768px) {
-      // padding-left: 378px;
-      // top: 63px;
-      // left: 307px;
-      margin-top: -380px;
-      padding-bottom: 30px;
-    }
+      margin-top: -400px;
+       margin-left: 60px;
+      }
     @media screen and (min-width: 1280px) {
       // padding-left: 594px;
     }
@@ -72,8 +75,44 @@
   .Buy-now-button,
   .notitia-block,
   .soooooo-tasty {
-    display: none;
-    
+    display: none;    
+  }
+
+  .soooooo-tasty{
+    @media screen and (min-width: 768px) {
+     display: block; 
+    }
+    @media screen and (min-width: 1280px) {
+    }
+  }
+
+  .navigation-case{
+    @media screen and (min-width: 1280px) {
+    display: block;
+  }
+  }
+
+  .nav{
+    transition: var(--transition-duration) var(--timing-function);
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.285;
+    color: #FFFFFF;
+  }
+
+  .navigation-list{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .navigation-list-item{
+   &:hover .nav:hover,
+     &:focus .nav:focus{
+      color: #D41443;
+    }
   }
 
  
@@ -169,7 +208,7 @@
   
    @media screen and (min-width: 768px) {
     padding-left: 50px;
-    padding-top: 0;
+    margin-top: 0;
   }
   @media screen and (min-width: 1280px) {
   }
@@ -203,7 +242,7 @@
   .header-but-list{
     padding-top: 19px;
     display: flex;
-    padding-bottom: 160px;
+    padding-bottom: 95px;
 
      @media screen and (min-width: 768px) {
       padding-bottom: 20px;
@@ -310,6 +349,10 @@
   .burger-case {
     display: flex;
     align-items: center;
+
+    @media screen and (min-width: 1280px) {
+    display: none;
+  }
   }
 
   .burger-btn {
@@ -343,16 +386,15 @@
   .hero-boarder {
     z-index: 1;
     position: relative;
-    margin-left: 36px;
-    width: 346px;
-    height: 346px;
+    width: 374px;
+    height: 351px;
     border-radius: 50%;
     background: var(--label-color);
-    margin-top: -430px;
+    margin-left: -240px;
 
     @media screen and (min-width: 768px) {
-    margin-left: 250px;
-    margin-top: -400px;
+    // margin-left: 280px;
+    // margin-top: -400px;
     }
     @media screen and (min-width: 1280px) {
     }
@@ -400,15 +442,28 @@
     top: 0px;
     background: #E17992;
     // box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
-    box-shadow: -11px 0px 10px 1px rgb(223 25 72 / 20%) //не по макету
+    box-shadow: -11px 0px 10px 1px rgb(223 25 72 / 20%); //не по макету
+
+    @media screen and (min-width: 1280px) {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none; 
+    }
+
+    
   }
   .background-close{
-    z-index: 6;
+    z-index: 9;
     top: 0px;
     position: absolute;
     width: 100%;
     height: 100%;
     background-color: transparent;
+    @media screen and (min-width: 1280px) {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none; 
+    }
   }
 
   .background-close.bat-close{
