--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -78,5 +78,11 @@
         src=" ./images/hero/girl-so-tasty-desktop.png "
         alt="girl tries an ice cream"
     /></picture>
+    <div class="counter-container">
+      <span class="cafes-counter">16</span>
+      <p class="cafes-counter-description">cafes</p>
+      <span class="trucks-counter">23</span>
+      <p class="trucks-counter-description">food trucks</p>
+    </div>
   </div>
 </section>
