--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -58,15 +58,19 @@ h1 {
 
 
 
+
     .ice-cream-picture{background-image: url(../images/hero/hero-circle-big-mobile.png);
     display:flex;
 background-repeat: no-repeat;
 background-position: top right;
 
+
 justify-content: flex-end;
 
 
     }
+
+   
     
 
 
@@ -81,12 +85,13 @@ justify-content: flex-end;
   .girl-so-tasty {
     display: none;
   }
+
+  .counter-container{display: none;}
 }
 @media screen and (min-width:768px){
 
      .ice-cream-picture{background-image: url(../images/hero/hero-circle-big-tablet.png);
 min-width: 324px;
-height: auto;
 display: inline-flex;
 background-repeat: no-repeat;
 position: absolute;
@@ -95,6 +100,7 @@ justify-content:center;
 
 
 }
+
 .hero .container{background-color: var(--colorful-bg-color-one);
     position: static;
   }
@@ -116,6 +122,8 @@ margin-top:19px;
 }
 .hero-left-side{display: inline-flex;
 flex-direction: column;
+transform: translateY(0);
+
 }
    
 
@@ -136,18 +144,41 @@ line-height: 90.5%;
 }
 
 .girl-so-tasty{
-display:inline-block;
+display:inline-flex;
 position: absolute;
 right: 34px;
-top: 50%;
+
 
 
 }
 
 
-.wrapper-container{position: static;
-  transform: translatey(0);
+.wrapper-container{position: relative;
+transform: translateY(0);
   display: inline-block;
+}
+
+.counter-container{display: inline-flex;
+flex-direction: column;
+position: absolute;
+
+}
+
+.cafes-counter, .trucks-counter{font-family: Titan One;
+
+font-weight: 400;
+font-size: 28px;
+line-height: 1.142;
+letter-spacing: 0.04em;
+text-transform: uppercase;
+color: var(--accent-color);
+}
+
+.cafes-counter-description, .trucks-counter-description{
+font-weight: 400;
+font-size: 8px;
+line-height: 1.25;
+color: var( --primary-light-bg-color);
 }
 
 
