Обновляет мобильное меню

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -31,6 +31,10 @@
         
         position: relative;
 
+        &:focus {
+            background-color: var(--accent);
+        }
+
         &-icon {
             width: 20%;
             height: 20%;
@@ -57,12 +61,20 @@
     padding-top: 12px;
     padding-bottom: 12px;
     display: inline-block;
+
+    &:focus {
+        color: var(--dark-pink);
+    }
 }
 
 
 .menu-list-item {
     padding-left: 21px;
     border-top: 1px solid var(--mobile-menu-pseudo-color);
+}
+
+.menu-list-item:last-child {
+    border-bottom: 1px solid var(--mobile-menu-pseudo-color);
 }
 
 .menu-close-btn {
