--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,7 +3,7 @@
     <h2 class="visually-hidden">Преимущества</h2>
     <ul class="advantages__list">
       <li class="advantages__items advantages__items--icon1">
-        <p class="advantages__text">721</p>
+        <p class="advantages__text animate__wobble">721</p>
         <p class="advantages__description">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
