--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,16 +1,19 @@
 <section class="about">
 <div class="container">   
 <p class="about__label">tradition and love</p>
-<h1 class="title">how it’s made?</h1>
+<h1 class="title making">how it’s made?</h1>
 <div class="about__thumb">
-<div class="about__image"></div>
-<div class="abot__text">
+<div class="about__image">
+</div>
+<div class="about__text">
     <p class="about__motto">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. 
     Maecenas eleifend erat at justo fringilla.</p>
+    <div class="about__thumb-image">
     <p class="about__value">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. 
     Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.</p>
     <p class="about__quote">Aliquam erat volutpat. Aenean accumsan.</p>
     <button type="button" class="about__button" data-modal-open>Read more</button>
+</div>
 </div>
 </div>
 </div>
