--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -1,7 +1,7 @@
 .about {
   display: flex;
   align-items: center;
-
+ 
 @media screen and (min-width: $mobile) {
     padding-top: 125px;
     padding-bottom: 20px;
@@ -16,6 +16,9 @@
     padding-top: 122px;
     padding-bottom: 19px;
   }
+}
+.making {
+text-align: center;
 }
 .about__label {
     font-family: Titan One;
@@ -55,6 +58,7 @@
   font-size: 14px;
   line-height: 176%;
   margin-bottom: 45px;
+  margin-top: 100px;
 
 }
 @media (min-width: $desktop){
@@ -62,6 +66,7 @@
   line-height: 176%;
   letter-spacing: 0.04em;
   margin-bottom: 35px;
+  margin-top: 106px;
 }
 }
 
@@ -93,36 +98,36 @@
   margin-top: 26px;
   height: 279px;
   width: 280px;
-  background-image: url(../img/cow-320-1x.png);
+  background-image: url("../images/4-about/mobi/cow-320-1x.png");
   background-size: 280px 279px;
   }  
 @media screen and (min-device-pixel-ratio: 2),
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
   .about__image {
-    background-image: url('../img/cow-320-2x.png');
+    background-image: url(../images/4-about/mobi/cow-320-2x.png);
   }
 }
-.about__thumb-image {
-  background-image: url(../img/milk-320-1x.png);
+.about{
+  background-image: url(../images/4-about/mobi/milk-320-1x.png);
   background-repeat: no-repeat;
-  background-size: 100% 100%;
- }
+  background-size: contain;
+  background-position: 0% 95%;
+  }
 @media screen and (min-device-pixel-ratio: 2),
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
-  .about__image {
-    background-image: url('../img/milk-320-2x.png');
-  }
+  .about{
+    background-image: url("../images/4-about/mobi/milk-320-2x.png");
 } 
 }
-
+}
 @media (min-width: $tablet) {
 .about__image {
   margin-top: 50px;
   height: 399px;
   width: 340px;
-  background-image: url(../img/cow-320-1x.png);
+  background-image: url("../images/4-about/tablet/cow-768-1x.png");
   background-size: 340px 399px;
   margin-right: 17px;
   }  
@@ -130,19 +135,19 @@
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
   .about__image {
-    background-image: url('../img/cow-768-2x.png');
+    background-image: url("../images/4-about/tablet/cow-768-2x.png");
   }
 }
-.about__thumb-image {
-background-image: none;  
+.about {
+  background-image: none;
 }
 }
- @media (min-width:$desktop){
+@media (min-width:$desktop){
    .about__image {
    margin-top: 55px;
    height: 516px;
    width: 516px;
-   background-image: url(../img/cow-1200-1x.png);
+   background-image: url("../images/4-about/desktop/cow-1200-1x.png");
    background-size: 516px 516px;
    margin-right: 74px; 
   }  
@@ -150,29 +155,49 @@ background-image: none;
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
   .about__image {
-    background-image: url('../img/cow-1200-2x.png');
+    background-image: url("../images/4-about/desktop/cow-1200-1x.png");
   }
 }
-.about__thumb-image {
-  background-image: url(../img/milk-1200-1x.png);
+.about{
+  background-image: url(../images/4-about/desktop/milk-1200-1x.png);
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: contain;
  }
 @media screen and (min-device-pixel-ratio: 2),
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
-  .about__image {
-    background-image: url('../img/milk-1200-2x.png');
-  }
-} 
+  .about {
+    background-image: url(../images/4-about/desktop/milk-1200-2x.png);
 }
-.about__thumb {
+}
+}
+.about__text {
+  @media (min-width:$tablet) {
+    width: 340px;
+   }
   @media (min-width:$desktop) {
-  display: flex;  
-  }
+     width: 463px;  
+}
 }
 .about__thumb {
    @media (min-width:$tablet) {
-     display: flex;
+    display: flex;
+   }
+  @media (min-width:$desktop) {
+    display: flex;
+   } 
+}
+.about__quote {
+  @media (min-width: $mobile){
+  margin-bottom: 27px;
+  margin-top: 5px;
+  }
+  @media (min-width:$tablet) {
+    margin-bottom: 62px;
+    margin-top: 8px;
+   }
+   @media (min-width:$desktop) {
+    margin-bottom: 45px;
+    margin-top: 35px;
    }
 }
