Чинит маржины между фотками

--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -1,8 +1,5 @@
 .gallery {
-  display: flex;
-  justify-content: center;
-
-  background-image: linear-gradient(
+   background-image: linear-gradient(
     to bottom,
     var(--second-bgc) 45%,
     var(--light-text-color) 45%,
@@ -20,14 +17,31 @@
     padding-top: 69px;
     padding-bottom: 62px;
   }
+  &__thumb {
+    display: flex;
+    justify-content: center;
+    margin: -1px;
+
+    @media (min-width: $tablet) {
+    margin: -2px;
+  }
+
+  @media (min-width: $desktop) {
+    margin: -3px;
+  }
+  }
 }
 
 .gallery__wrapper {
-  margin: -2px;
+  margin: 1px;
   display: inline;
 
   @media (min-width: $tablet) {
-    margin: -3px;
+    margin: 2px;
+  }
+
+  @media (min-width: $desktop) {
+    margin: 3px;
   }
 
   &:nth-child(1) {
@@ -80,7 +94,7 @@
 
   &:nth-child(6) {
     padding-top: 43px;
-
+   
     @media (min-width: $tablet) {
       padding-top: 93px;
     }
@@ -92,22 +106,25 @@
 }
 
 .gallery__picture {
-  margin: 4px;
+  margin-top: 1px;
+  margin-bottom: 1px;
   border-radius: 4px;
   overflow: hidden;
-
   transition: 500ms linear;
 
   @media (min-width: $tablet) {
-    margin: 6px;
     border-radius: 12px;
+    margin-top: 2px;
+    margin-bottom: 2px;
   }
 
   @media (min-width: $desktop) {
     border-radius: 20px;
+    margin-top: 3px;
+    margin-bottom: 3px;
   }
 
   &:hover {
-    transform: scale(1.2);
+    transform: scale(1.2);    
   }
 }
