--- a/src/sass/components/_backdrop.scss
+++ b/src/sass/components/_backdrop.scss
@@ -6,6 +6,7 @@
   left: 0;
   background-color: rgba(255, 184, 202, 0.6);
   opacity: 1;
+  z-index: 2;
 
   transition: opacity 250ms linear, visibility 250ms linear;
 }
