--- a/src/sass/components/_subtitle.scss
+++ b/src/sass/components/_subtitle.scss
@@ -1,8 +1,20 @@
 .subtitle {
   font-family: $ff-accent;
-  font-size: 30px;
-  line-height: 1.133;
-  letter-spacing: 0.04em;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.16;
   text-transform: uppercase;
+
   color: var(--text-label-color);
+
+  @media screen and(min-width: $tablet) {
+    font-size: 26px;
+    line-height: 1.15;
+    letter-spacing: 0.04em;
+  }
+
+  @media screen and(min-width: $desktop) {
+    font-size: 30px;
+    line-height: 1.13;
+  }
 }
