--- a/src/sass/components/_title.scss
+++ b/src/sass/components/_title.scss
@@ -1,8 +1,21 @@
 .title {
   font-family: $ff-accent;
-  font-size: 58px;
-  line-height: 1.137;
-  letter-spacing: 0.06em;
+  font-weight: 400;
+  font-size: 34px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
   text-transform: uppercase;
   color: var(--accent-primary-color);
+
+  @media screen and(min-width: $tablet) {
+    font-size: 48px;
+    line-height: 1.15;
+    letter-spacing: 0.06em;
+  }
+
+  @media screen and(min-width: $desktop) {
+    font-size: 58px;
+    line-height: 1.4;
+    text-transform: uppercase;
+  }
 }
