ended my section

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,57 +1,43 @@
 <section class="customer">
   <div class="container">
-    <picture
-      ><!-- girl-smiling -->
+    <picture><!-- girl-smiling -->
       <source
         srcset="
           ./images/customer-reviews/girl-smiling-desktop.webp    1x,
-          ./images/customer-reviews/girl-smiling-desktop@2x.webp 2x
-        "
+          ./images/customer-reviews/girl-smiling-desktop@2x.webp 2x"
         media="(min-width: 1200px)"
-        type="image/webp"
-      />
+        type="image/webp"/>
       <source
         srcset="
           ./images/customer-reviews/girl-smiling-desktop.jpg    1x,
-          ./images/customer-reviews/girl-smiling-desktop@2x.jpg 2x
-        "
-        media="(min-width: 1200px)"
-      />
+          ./images/customer-reviews/girl-smiling-desktop@2x.jpg 2x"
+        media="(min-width: 1200px)"/>
       <source
         srcset="
           ./images/customer-reviews/girl-smiling-tablet.webp    1x,
-          ./images/customer-reviews/girl-smiling-tablet@2x.webp 2x
-        "
+          ./images/customer-reviews/girl-smiling-tablet@2x.webp 2x"
         media="(min-width: 768px)"
-        type="image/webp"
-      />
+        type="image/webp"/>
       <source
         srcset="
           ./images/customer-reviews/girl-smiling-tablet.jpg    1x,
-          ./images/customer-reviews/girl-smiling-tablet@2x.jpg 2x
-        "
-        media="(min-width: 768px)"
-      />
+          ./images/customer-reviews/girl-smiling-tablet@2x.jpg 2x"
+        media="(min-width: 768px)"/>
       <source
         srcset="
           ./images/customer-reviews/girl-smiling-mobile.webp    1x,
-          ./images/customer-reviews/girl-smiling-mobile@2x.webp 2x
-        "
+          ./images/customer-reviews/girl-smiling-mobile@2x.webp 2x"
         media="(min-width: 480px)"
-        type="image/webp"
-      />
+        type="image/webp"/>
       <source
         srcset="
           ./images/customer-reviews/girl-smiling-mobile.jpg    1x,
-          ./images/customer-reviews/girl-smiling-mobile@2x.jpg 2x
-        "
-        media="(min-width: 480px)"
-      />
+          ./images/customer-reviews/girl-smiling-mobile@2x.jpg 2x"
+        media="(min-width: 480px)"/>
       <img
         src="./images/customer-reviews/girl-smiling-mobile.jpg"
         class="customer-img-girl"
-        alt="smiling girl Emily"
-      />
+        alt="smiling girl Emily"/>
     </picture>
     <div class="customer-card">
       <div class="customer-card-text">
@@ -67,5 +53,22 @@
     </div>
     <span class="customer-point"></span>
     <h2 class="customer-name">Emily, Los Angeles</h2>
+    <ul class="customer-slade-list">
+      <li class="customer-slade-point">
+        <svg class="customer-slade-icon-home">
+          <use href="./images/icon-sprite.svg#icon-home"></use>
+        </svg>
+      </li>
+      <li class="customer-slade-point">
+        <svg class="customer-slade-icon-point">
+          <use href="./images/icon-sprite.svg#icon-circle"></use>
+        </svg>
+      </li>
+      <li class="customer-slade-point">
+        <svg class="customer-slade-icon-point">
+          <use href="./images/icon-sprite.svg#icon-circle"></use>
+        </svg>
+      </li>
+    </ul>
   </div>
 </section>
