add modal button

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,7 +10,8 @@
 @import "./utils/mixins";
 @import "./base/common";
 @import "./base/container";
-
+@import "./components/modal-button";
+@import "./components/modal-form";
 
 //layouts
 @import './layout/header';
