--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -1,13 +1,22 @@
 .about {
   display: flex;
   align-items: center;
- 
-@media screen and (min-width: $mobile) {
-    padding-top: 125px;
-    padding-bottom: 20px;
-  }
+  padding-top: 130px;
+  padding-bottom: 20px;
+ background-color: var(--second-bgc);
+  background-image: url(../images/4-about/mobi/milk-320-1x.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 0% 95%;
+  
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+      background-image: url("../images/4-about/mobi/milk-320-2x.png");
+    } 
 
   @media screen and (min-width: $tablet) {
+    background-image: none;
     padding-top: 130px;
     padding-bottom: 33px;
   }
@@ -15,31 +24,60 @@
   @media screen and (min-width: $desktop) {
     padding-top: 122px;
     padding-bottom: 19px;
+    background-image: url(../images/4-about/desktop/milk-1200-1x.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+  
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+      background-image: url(../images/4-about/desktop/milk-1200-2x.png);
+    }
   }
 }
-.making {
-text-align: center;
+
+.about .title {
+  font-size: 34px;
+  line-height: 1.147;
+  letter-spacing: 0.04em;
+  margin-bottom: 26px;
+  text-align: center;
+
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 50px;
+  }
+
+  @media screen and (min-width: $desktop){
+    font-size: 58px;
+    line-height: 1.138;
+    letter-spacing: 0.06em;
+    margin-bottom: 55px;
+  }
 }
+
+.about .button {
+  width: 176px;
+}
+
 .about__label {
-    font-family: Titan One;
-    text-align: center;
-    text-transform: uppercase;
-    color: var(--text-label-color);
-    margin-bottom: 16px;
-    
-@media screen and (min-width: $mobile) {
+  font-family: $ff-accent;
+  font-weight: 400;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--text-label-color);
+  margin-bottom: 16px;
   font-size: 18px;
   line-height: 1.166;
-}
-@media screen and (min-width: $tablet) {
-  font-size: 26px;
-  line-height: 1.153;
-}
-@media screen and (min-width: $desktop){
-  font-size: 30px;
-  line-height: 1.133;
-  letter-spacing: 0.04em;
-}
+
+  @media screen and (min-width: $tablet) {
+    font-size: 26px;
+    line-height: 1.153;
+  }
+  
+  @media screen and (min-width: $desktop){
+    font-size: 30px;
+    line-height: 1.133;
+  }
 }
 
 .about__motto {
@@ -48,156 +86,111 @@ text-align: center;
     letter-spacing: 0em;
     text-align: left;
     color:var(--dark--text-color);
-
-@media (min-width: $mobile) {
     font-size: 12px;
-    line-height: 162%;
-    margin-bottom: 46px;
-}
-@media (min-width: $tablet){
-  font-size: 14px;
-  line-height: 176%;
-  margin-bottom: 45px;
-  margin-top: 100px;
+    line-height: 1.62;
+    margin-bottom: 31px;
 
-}
-@media (min-width: $desktop){
-  font-size: 16px;
-  line-height: 176%;
-  letter-spacing: 0.04em;
-  margin-bottom: 35px;
-  margin-top: 106px;
-}
+  @media (min-width: $tablet){
+    font-size: 14px;
+    line-height: 1.76;
+    margin-bottom: 28px;
+  }
+
+  @media (min-width: $desktop){
+    font-size: 16px;
+    letter-spacing: 0.04em;
+    margin-bottom: 35px;
+  }
 }
 
 .about__thumb-image {
   font-family: DM Sans;
   font-weight: 500;
-  color:var(--copyright-text-color);
-  
-  @media (min-width: $mobile){
+  color:var(--copyright-text-color); 
   font-size: 12px;
-  line-height: 162%;
+  line-height: 1.62;
   margin-bottom: 17px;
-  }
+  
   @media (min-width: $tablet){
   font-size: 14px;
-  line-height: 176%;
+  line-height: 1.76;
   letter-spacing: 0.04em;
-  margin-bottom: 62px;
+  margin-bottom: 0;
 }
   @media (min-width:$desktop){
     font-size: 14px;
-    line-height: 194%;
-    letter-spacing: 0.04em;
-    margin-bottom: 45px;
+    line-height: 1.94;
+    
+    
   }
 }
-@media (min-width: $mobile) {
+
 .about__image {
-  margin-top: 26px;
   height: 279px;
   width: 280px;
   background-image: url("../images/4-about/mobi/cow-320-1x.png");
-  background-size: 280px 279px;
-  }  
-@media screen and (min-device-pixel-ratio: 2),
-  screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx) {
-  .about__image {
-    background-image: url(../images/4-about/mobi/cow-320-2x.png);
-  }
-}
-.about{
-  background-image: url(../images/4-about/mobi/milk-320-1x.png);
-  background-repeat: no-repeat;
   background-size: contain;
-  background-position: 0% 95%;
+  margin-bottom: 46px;
+    
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) { 
+      background-image: url(../images/4-about/mobi/cow-320-2x.png);
+    }
+    
+  @media (min-width: $tablet) {
+    height: 339px;
+    width: 340px;
+    background-image: url("../images/4-about/tablet/cow-768-1x.png");
+    margin-bottom: 0;
+    margin-right: 17px;
+       
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) { 
+      background-image: url("../images/4-about/tablet/cow-768-2x.png"); 
+    }
   }
-@media screen and (min-device-pixel-ratio: 2),
-  screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx) {
-  .about{
-    background-image: url("../images/4-about/mobi/milk-320-2x.png");
-} 
-}
-}
-@media (min-width: $tablet) {
-.about__image {
-  margin-top: 50px;
-  height: 399px;
-  width: 340px;
-  background-image: url("../images/4-about/tablet/cow-768-1x.png");
-  background-size: 340px 399px;
-  margin-right: 17px;
-  }  
-@media screen and (min-device-pixel-ratio: 2),
-  screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx) {
-  .about__image {
-    background-image: url("../images/4-about/tablet/cow-768-2x.png");
-  }
-}
-.about {
-  background-image: none;
-}
-}
-@media (min-width:$desktop){
-   .about__image {
-   margin-top: 55px;
+
+  @media (min-width:$desktop){   
    height: 516px;
    width: 516px;
    background-image: url("../images/4-about/desktop/cow-1200-1x.png");
-   background-size: 516px 516px;
-   margin-right: 74px; 
-  }  
-@media screen and (min-device-pixel-ratio: 2),
-  screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx) {
-  .about__image {
-    background-image: url("../images/4-about/desktop/cow-1200-1x.png");
+   margin-right: 74px;
+   @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+      background-image: url("../images/4-about/desktop/cow-1200-1x.png");    
+    }
   }
 }
-.about{
-  background-image: url(../images/4-about/desktop/milk-1200-1x.png);
-  background-repeat: no-repeat;
-  background-size: contain;
- }
-@media screen and (min-device-pixel-ratio: 2),
-  screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx) {
-  .about {
-    background-image: url(../images/4-about/desktop/milk-1200-2x.png);
-}
-}
-}
+
 .about__text {
   @media (min-width:$tablet) {
     width: 340px;
+    padding-top: 50px;
    }
+
   @media (min-width:$desktop) {
      width: 463px;  
+  }
 }
-}
+
 .about__thumb {
    @media (min-width:$tablet) {
     display: flex;
    }
-  @media (min-width:$desktop) {
-    display: flex;
-   } 
 }
-.about__quote {
-  @media (min-width: $mobile){
-  margin-bottom: 27px;
-  margin-top: 5px;
-  }
+
+.about__quote {  
+  margin-bottom: 21px;
+  margin-top: 10px;
+  
   @media (min-width:$tablet) {
-    margin-bottom: 62px;
-    margin-top: 8px;
-   }
+    margin-bottom: 57px;
+  }
    @media (min-width:$desktop) {
-    margin-bottom: 45px;
-    margin-top: 35px;
+    margin-bottom: 38px;
+    margin-top: 27px;
    }
 }
